@@ -4,9 +4,12 @@ Todo
 for 0.6
 -------
 
-- document encodings
+- more setuptools entrypoints (html formatter etc.)
+  see paste script's Commands
 
-- guess encoding support?
+- pygmentize presets?
+
+- short cmdline options for common -O options
 
 - html formatter: full document, external css file?
 
