@@ -5,8 +5,11 @@ Version 0.6
 -----------
 (released Nov XX, 2006)
 
+- Support for guessing input encoding added.
+
 - Encoding support added: all processing is now done with Unicode
-  strings, input and output are converted from and to byte strings.
+  strings, input and output are converted from and to byte strings
+  (see the ``encoding`` option of lexers and formatters).
 
 - Some improvements in the C(++) lexers handling comments and line
   continuations.
